--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
