--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
